experiments/experiments/5style-1439/logs/full_eval_epoch_0020.log
  File "I:\Github\Latent_Style\Cycle-NCE\src\utils\run_evaluation.py", line 507
    <<<<<<< Updated upstream
    ^^
SyntaxError: invalid syntax
